@startuml

title __ACCOUNT's Class Diagram__\n

  namespace com.chrisjaunes.communication.client {
    namespace account {
      class com.chrisjaunes.communication.client.account.AccountViewModel {
          ~ result : MutableLiveData<UniApiResult<String>>
          + getResult()
          + updateAvatar()
          + updateTextStyle()
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace account {
      class com.chrisjaunes.communication.client.account.LoginActivity {
          {static} + STR_AUTO_LOGIN : String
          {static} + STR_AUTO_LOGIN_ACCOUNT : String
          {static} + STR_AUTO_LOGIN_PASSWORD : String
          # onCreate()
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace account {
      class com.chrisjaunes.communication.client.account.LoginViewModel {
          {static} + STATUS_LOGIN_ACCOUNT_ERROR : String
          {static} + STATUS_LOGIN_PASSWORD_ERROR : String
          {static} + STATUS_LOGIN_SUCCESSFUL : String
          {static} + STR_ACCOUNT : String
          {static} + STR_PASSWORD : String
          - accountRawLiveData : MutableLiveData<AccountRaw>
          - uniApiResultLiveDate : MutableLiveData<UniApiResult<String>>
          + getAccountRawLiveData()
          + getUniApiResultLiveDate()
          + login()
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace account {
      class com.chrisjaunes.communication.client.account.RegisterActivity {
          {static} - PHOTO_REQUEST_GALLERY : int
          + onActivityResult()
          # onCreate()
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace account {
      class com.chrisjaunes.communication.client.account.RegisterViewModel {
          - result : MutableLiveData<UniApiResult<String>>
          + getResult()
          + register()
      }
    }
  }
  

  com.chrisjaunes.communication.client.account.AccountViewModel -up-|> androidx.lifecycle.ViewModel
  com.chrisjaunes.communication.client.account.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.chrisjaunes.communication.client.account.LoginViewModel -up-|> androidx.lifecycle.ViewModel
  com.chrisjaunes.communication.client.account.RegisterActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.chrisjaunes.communication.client.account.RegisterViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
